Placeholder for empty box and combobox to move an application

--- a/app/views/Application/box.html
+++ b/app/views/Application/box.html
@@ -47,6 +47,12 @@ $(function(){
 #{/list}
 </div>
 
+#{if applications.size() == 0}
+<div id="noCandidate">
+    No application here...
+</div>
+#{/}
+
 #{if pageCount > 1}
 <div id="pages">
 <ul
