--- a/app/views/main.html
+++ b/app/views/main.html
@@ -21,7 +21,7 @@
             <nav>
                 <input type="search" results="10" placeholder="Search" id="search" />
                 <ul>
-                    <li class="new"><a href="@{Application.box('new', 0)}">Submited</a></li>
+                    <li class="new"><a href="@{Application.box('new', 0)}">Submitted</a></li>
                     <li class="inprogress"><a href="@{Application.box('inprogress', 0)}">In process</a></li>
                     <li class="archived"><a href="@{Application.box('archived', 0)}">Archived</a></li>
                 </ul>
