--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -163,7 +163,14 @@ nav li a.active {
 #list {
     padding: 10px;
 }
-
+#noCandidate {
+    font-style: italic;
+    font-size: 1.1em;
+    width: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 50px;
+}
 .candidate-list {
     padding: 10px;
     border-top: 1px solid #fff;
