--- a/app/views/JobApplications/index.html
+++ b/app/views/JobApplications/index.html
@@ -95,6 +95,7 @@
         GP.UI.initInplaceEdit();
         GP.UI.initTabBar();
         GP.UI.setStatusBox();
+        $("#search").attr("disabled", "disabled");
     });
 
     var GP = GP || {};
