--- a/app/views/main.html
+++ b/app/views/main.html
@@ -31,7 +31,7 @@
             #{doLayout /}
         </div>
         <footer>
-            ©2010 zenexity.com
+            ©zenexity.com
         </footer>
         <script src="@{'/public/javascripts/lib/jquery-1.4.4.min.js'}" type="text/javascript" charset="utf-8"></script>
         <script src="@{'/public/javascripts/lib/jquery.tmpl.min.js'}" type="text/javascript" charset="utf-8"></script>
