--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -21,7 +21,7 @@
         <dt><a class="name" href="/resume/{{= id }}">{{= name }}</a></dt>
         <dd class="tags">
             <ul>{{each tags}}
-                <li>{{= $value}}</li>
+                <li><a href="{{= box}}/tag:{{= $value}}">{{= $value}}</a></li>
             {{/each}}</ul>
         </dd>
         <dd class="submition"><time>{{= formattedDate }}</time></dd>
@@ -41,14 +41,30 @@
 <script type="text/javascript" charset="utf-8">
 
     var w;
+    var searchTimeout = null
+
+    // TODO: Move the searchbar related functionality to a different JS file
+    function applySearch(delay) {
+        if (searchTimeout) {
+            window.clearTimeout(searchTimeout);
+        }
+        searchTimeout = window.setTimeout(function(){
+            var q = $("#search").val()
+            if (q.length < 3) {
+                window.location.hash = "#" + w.box;
+                return;
+            }
+            window.location.hash = "#" + w.box + "/" + q;
+        }, delay ? 300 : 0);
+    }
 
     $("#search").keyup(function(){
-        var q = $(this).val();
-        if (q.length < 3) {
-            window.location.hash = "#" + w.box;
-            return;
-        }
-        window.location.hash = "#" + w.box + "/" + q;
+        applySearch(true);
+    });
+
+    $("#search").click(function(){
+        if ($(this).val() == "")
+            applySearch();
     });
 
     $(function(){
