--- a/app/views/JobApplications/index.html
+++ b/app/views/JobApplications/index.html
@@ -11,7 +11,7 @@
 }
 </style>
 #{/set}
-#{set title:'Resume' /}
+#{set 'title'}${resume.name} - Great People#{/set}
 
 <div id="candidate">
     <h1 class="inplace" id="name">${resume.name}</h1>
